@@ -10,17 +10,17 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenFullDepInrOrd() {
-        List<String> input = Arrays.asList("k1/sk2", "k1/sk1/ssk1", "k1/sk1/ssk2", "k1/sk1", "k1",
+        List<String> input = List.of("k1/sk2", "k1/sk1/ssk1", "k1/sk1/ssk2", "k1/sk1", "k1",
                                             "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2", "k1/sk1", "k2");
-        List<String> expect = Arrays.asList("k1",
+        List<String> expect = List.of("k1",
                                             "k1/sk2",
                                             "k1/sk1",
                                             "k1/sk1/ssk1",
@@ -35,9 +35,9 @@ public class DepartmentsTest {
 
     @Test
     public void whenFullDepDecOrd() {
-        List<String> input = Arrays.asList("k1/sk2", "k1/sk1/ssk1", "k1/sk1/ssk2", "k1/sk1", "k1",
+        List<String> input = List.of("k1/sk2", "k1/sk1/ssk1", "k1/sk1/ssk2", "k1/sk1", "k1",
                 "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2", "k1/sk1", "k2");
-        List<String> expect = Arrays.asList("k2",
+        List<String> expect = List.of("k2",
                                             "k2/sk1",
                                             "k2/sk1/ssk1",
                                             "k2/sk1/ssk2",
@@ -53,8 +53,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
